--- a/client/src/routes/Cockpit/Cockpit.scss
+++ b/client/src/routes/Cockpit/Cockpit.scss
@@ -95,8 +95,8 @@
     .modelViewer{
         position: fixed;
         top: 0;
-        left: 0;
-        margin-left: 40px;
+        left: 50%;
+        transform: translateX(-50%);
         width: 100%;
         height: 100vh;
         z-index: 0;
